examples/gateway/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*"
  
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-virtualservice
spec:
    hosts:
      - "*"
    gateways:
      - ingress-gateway-k3s
    http:
      - route:
        - destination:
            host: echo-service
            subset: foo
          weight: 60
        - destination:
            host: echo-service
            subset: bar
          weight: 40
  
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: echo-destinationrule
spec:
  host: echo-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: foo
      labels:
        version: foo
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: bar
      labels:
        version: bar
